--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "functions\\": "src/functions/"
         }
     },
     "autoload-dev": {
